--- a/Informes/Oficial_PG1_Informe.Rmd
+++ b/Informes/Oficial_PG1_Informe.Rmd
@@ -112,7 +112,7 @@ En resumen, en esta sección se registran todas las variables utilizadas a parti
 ### Encuestas de Stakoverflow
 
 | Nombre de la variable   | Tipo de variable   | Descripción                                                        | Restricciones                   |
-|-----------------|-----------------|----------------------|-----------------|
+|-----------------|-----------------|---------------------|-----------------|
 | MainBranch              | Categórica nominal | Contiene información sobre el estado profesional del desarrollador | \-                              |
 | Employment              | Categórica nominal | El tipo de empleo que tiene le desarrollador                       | separado por punto y coma       |
 | RemoteWork              | Categórica nominal | De que forma ejercen el trabajo remoto                             | \-                              |
@@ -133,7 +133,7 @@ En resumen, en esta sección se registran todas las variables utilizadas a parti
 ### PLDB Lenguajes de Programación
 
 | Nombre de la variable | Tipo de variable   | Descripción                                                       | Restricciones                   |
-|-----------------|-----------------|---------------------|-----------------|
+|-----------------|-----------------|--------------------|-----------------|
 | Title                 | Categórica Nominal | Nombre original del lenguaje de programación                      | \-                              |
 | Appeared              | Numérica discreta  | Año en donde apareció por primera vez el lenguaje de programación | \>= 1945                        |
 | Rank                  | Numérica discreta  | Un ranking hecho por PLDB                                         | \>=0                            |
@@ -267,12 +267,6 @@ for (i in 1:nrow(planguages)){
     df <- rbind(df, fila)
   }
 }
-
-planguages <- df
-rm(df)
-rm(fila)
-rm(i)
-rm(agregar_fila)
 ```
 
 ### Limpieza de "Survey Results"
@@ -361,10 +355,6 @@ for (i in 1:nrow(encuesta)) {
     encuesta[i, elem] <- TRUE
   }
 }
-
-rm(elem)
-rm(i)
-rm(name)
 ```
 
 #### Mental Health
@@ -391,8 +381,6 @@ encuesta$Autismo <- columna_booleana
 # op5
 columna_booleana <- str_detect(encuesta$MentalHealth, paste0("\\b", "learning", "\\b"))
 encuesta$Aprendizaje <- columna_booleana
-
-rm(columna_booleana)
 ```
 
 #### Sistemas operativos
@@ -492,14 +480,6 @@ ansiedad <- filter(encuesta, Anciedad == TRUE)
 emocional <- filter(encuesta, Emocional == TRUE)
 autismo <- filter(encuesta, Autismo == TRUE)
 aprendizaje <- filter(encuesta, Aprendizaje == TRUE)
-
-
-language <- encuesta %>%
-  separate_rows(ProgLanguages, sep = ";") %>%
-  group_by(ProgLanguages) %>%
-  summarize() %>%
-  pull()
-
 ```
 
 #### Memoria:
@@ -507,23 +487,17 @@ language <- encuesta %>%
 > ##### Tabla de frecuencias:
 
 ```{r}
-
 porcentajes <- c()
 
-
-#iterar por cada lenguaje de programación
 for (current in language){
 	cantidad = nrow(memoria[memoria[[current]] == TRUE, ])
 	cantidadTotal = nrow(encuesta[encuesta[[current]] == TRUE, ])
 	porcentajes[current] <- cantidad/cantidadTotal
 }
 
-
-#ordenar porcentajes de mayor a menor
 porcentajes <- sort(porcentajes, decreasing = TRUE)
 
-#mostrar tabla en formato de tabla
-porcentajes = data.frame(porcentajes)
+porcentajes <- data.frame(porcentajes)
 
 porcentajes
 ```
@@ -531,46 +505,34 @@ porcentajes
 > ##### Gráfico de barras, porcentaje de personas que sufre usando una tecnología:
 
 ```{r}
-
 porcentajeshelper <- porcentajes$porcentajes[1:15]
 nombres <- rownames(porcentajes)[1:15]
-
-#plotear porcentajes en grafico de barras de lado
 
 barplot(porcentajeshelper, 
 	main="% Personas que sufren de problemas de Memoria", 
 	xlab="Porcentaje de personas", 
-  #degradado lineal de azul oscuro a azul
   col=colorRampPalette(c("darkblue", "blue"))(15),
 	xlim = c(0,0.25),
 	horiz=TRUE,
 	las=1,
-	#nombres
 	names.arg=nombres,
 	cex.names=0.5,
 	cex.axis=0.5,
-
 	)
-
 
 porcentajeshelper <- porcentajes$porcentajes[25:40]
 nombres <- rownames(porcentajes)[25:40]
 
-#plotear porcentajes en grafico de barras de lado
-
 barplot(porcentajeshelper, 
 	main="% Personas que sufren de problemas de Memoria", 
 	xlab="Porcentaje de personas", 
-  #degradado lineal de azul oscuro a azul
   col=colorRampPalette(c("darkblue", "blue"))(15),
 	xlim = c(0,0.25),
-	horiz=TRUE,
+	horiz = TRUE,
 	las=1,
-	#nombres
-	names.arg=nombres,
+	names.arg = nombres,
 	cex.names=0.5,
 	cex.axis=0.5,
-
 	)
 ```
 
@@ -1140,6 +1102,166 @@ encuesta %>%
   aes(x = Salary, y = Aprendizaje) +
   geom_boxplot(fill = "#FFD6F8") +
   theme_minimal()
+```
+
+### ¿Sistemas Operativos vs Salud Mental?
+
+> Creamos la tabla con todos los tipos de mental health
+
+```{r}
+# Creación de la tabla con los mental health
+tabla2 <- data.frame(Mental_Health = c("Memory","Emotional", "Anxiety", "Autism", "Learning"),
+                    CantUsers = c(sum(encuesta$Memoria== TRUE),
+                                  sum(encuesta$Emocional == TRUE),
+                                  sum(encuesta$Anciedad == TRUE),
+                                  sum(encuesta$Autismo == TRUE),
+                                  sum(encuesta$Aprendizaje == TRUE))
+                    )
+
+print(tabla2)
+```
+
+> Creamos una tabla de conteo general con los sistemas operativos
+
+```{r}
+# Creación de la tabla con los sistemas operativos
+tabla <- data.frame(`OpSysPersonal use` = c("BSD", "Linux-based", "Windows", "Windows Subsystem for Linux (WSL)", "macOS"),
+                    CantUsers = c(sum(encuesta$BSD == TRUE),
+                                  sum(encuesta$Linux_Based == TRUE),
+                                  sum(encuesta$Windows == TRUE),
+                                  sum(encuesta$Windows_for_Linux == TRUE),
+                                  sum(encuesta$Mac == TRUE))
+                    )
+
+print(tabla)
+
+```
+
+> Creamos una tabla por cada sistema operativo para almacenar la Porcentaje de personas que sufren de cada tipo de condición mental
+
+#### BSD
+
+```{r}
+tablaBSD <- data.frame(`OpSysPersonal use` = "BSD",
+CantUsersMemory = sum(encuesta$BSD == TRUE & encuesta$Memoria == TRUE),
+CantUsersEmotional = sum(encuesta$BSD == TRUE & encuesta$Emotional == TRUE),
+CantUsersAnxiety = sum(encuesta$BSD == TRUE & encuesta$Anxiety == TRUE),
+CantUsersAutism = sum(encuesta$BSD == TRUE & encuesta$Autism == TRUE),
+CantUsersLearning = sum(encuesta$BSD == TRUE & encuesta$Learning == TRUE),
+Total = sum(encuesta$BSD == TRUE))
+
+print(tablaBSD)
+```
+
+#### LINUX BASED
+
+```{r}
+tablaLinuxB <- data.frame(`OpSysPersonal use` = "Linux-based",
+CantUsersMemory = sum(encuesta$Linux_Based == TRUE & encuesta$Memoria == TRUE),
+CantUsersEmotional = sum(encuesta$Linux_Based == TRUE & encuesta$Emotional == TRUE),
+CantUsersAnxiety = sum(encuesta$Linux_Based == TRUE & encuesta$Anxiety == TRUE),
+CantUsersAutism = sum(encuesta$Linux_Based == TRUE & encuesta$Autism == TRUE),
+CantUsersLearning = sum(encuesta$Linux_Based == TRUE & encuesta$Learning == TRUE),
+Total = sum(encuesta$Linux_Based == TRUE))
+
+print(tablaLinuxB)
+```
+
+#### WINDOWS
+
+```{r}
+tablaWindows <- data.frame(`OpSysPersonal use` = "Windows",
+CantUsersMemory = sum(encuesta$Windows == TRUE & encuesta$Memoria == TRUE),
+CantUsersEmotional = sum(encuesta$Windows == TRUE & encuesta$Emotional == TRUE),
+CantUsersAnxiety = sum(encuesta$Windows == TRUE & encuesta$Anxiety == TRUE),
+CantUsersAutism = sum(encuesta$Windows == TRUE & encuesta$Autism == TRUE),
+CantUsersLearning = sum(encuesta$Windows == TRUE & encuesta$Learning == TRUE),
+Total = sum(encuesta$Windows == TRUE))
+
+print(tablaWindows)
+```
+
+**WSL**
+
+```{r}
+tablaWindowsLinux <- data.frame(`OpSysPersonal use` = "Windows_Linux",
+CantUsersMemory = sum(encuesta$Windows_for_Linux == TRUE & encuesta$Memoria == TRUE),
+CantUsersEmotional = sum(encuesta$Windows_for_Linux == TRUE & encuesta$Emotional == TRUE),
+CantUsersAnxiety = sum(encuesta$Windows_for_Linux == TRUE & encuesta$Anxiety == TRUE),
+CantUsersAutism = sum(encuesta$Windows_for_Linux == TRUE & encuesta$Autism == TRUE),
+CantUsersLearning = sum(encuesta$Windows_for_Linux == TRUE & encuesta$Learning == TRUE),
+Total = sum(encuesta$Windows_for_Linux == TRUE))
+
+print(tablaWindowsLinux)
+```
+
+**macOS**
+
+```{r}
+tablaMac <- data.frame(`OpSysPersonal use` = "MacOS",
+CantUsersMemory = sum(encuesta$Mac == TRUE & encuesta$Memoria == TRUE),
+CantUsersEmotional = sum(encuesta$Mac == TRUE & encuesta$Emotional == TRUE),
+CantUsersAnxiety = sum(encuesta$Mac == TRUE & encuesta$Anxiety == TRUE),
+CantUsersAutism = sum(encuesta$Mac == TRUE & encuesta$Autism == TRUE),
+CantUsersLearning = sum(encuesta$Mac == TRUE & encuesta$Learning == TRUE),
+Total = sum(encuesta$Mac == TRUE))
+
+print(tablaMac)
+```
+
+> Unimos todo en una tabla
+
+```{r}
+# Unir las tablas
+tabla_final <- rbind(tablaBSD, tablaLinuxB, tablaWindows, tablaWindowsLinux, tablaMac)
+print(tabla_final)
+```
+
+> Hicimos el gráfico de barras apiladas
+
+```{r}
+library(ggplot2)
+tabla_larga <- tidyr::gather(tabla_final, key = "MentalHealth", value = "Cantidad Total", -OpSysPersonal.use)
+
+tabla_larga <- tabla_larga[tabla_larga$MentalHealth != "Total", ]
+
+grafico <- ggplot(tabla_larga, aes(x = OpSysPersonal.use, y = `Cantidad Total`, fill = ifelse(MentalHealth != "Total", MentalHealth, ""))) +
+  geom_bar(stat = "identity") +
+  labs(x = "Sistema Operativo para uso profesional", y = "Cantidad Total de Personas", fill = "MentalHealth") +
+  ggtitle("Salud Mental vs. Sistemas Operativos") +
+  theme_minimal()
+
+print(grafico)
+
+```
+
+> Intentamos poner una barra al costado de cada sistema operativo para indicar el "verdadero" total de personas, ya que una persona puede sufrir de varias condiciones mentales. No sabemos si es necesario, lo dejamos para la entrega final.
+
+```{r}
+library(ggplot2)
+
+tabla_larga <- tidyr::gather(tabla_final, key = "MentalHealth", value = "Cantidad Total", -OpSysPersonal.use)
+tabla_larga <- tabla_larga[tabla_larga$MentalHealth != "Total", ]
+
+# Calcular el total de CantUsers por cada sistema operativo
+total_cant_users <- aggregate(Total ~ OpSysPersonal.use, data = tabla_final, FUN = sum)
+
+# Combinar los datos de tabla_larga y total_cant_users
+tabla_final_completa <- merge(tabla_larga, total_cant_users, by = "OpSysPersonal.use", all.x = TRUE)
+
+# Ordenar los datos por OpSysPersonal.use para mantener el orden en el gráfico
+tabla_final_completa <- tabla_final_completa[order(tabla_final_completa$OpSysPersonal.use), ]
+
+grafico <- ggplot(tabla_final_completa, aes(x = OpSysPersonal.use, fill = MentalHealth)) +
+  geom_bar(aes(y = Total), stat = "identity", position = "stack") +
+  geom_bar(aes(x = OpSysPersonal.use, y = Total), stat = "identity", fill = "gray", width = 0.3) +
+  geom_text(aes(x = OpSysPersonal.use, y = Total, label = Total), vjust = -0.5, color = "black", size = 3, hjust = 1) +
+  labs(x = "Sistema Operativo para uso profesional", y = "Cantidad Total de Personas", fill = "MentalHealth") +
+  ggtitle("Salud Mental vs. Sistemas Operativos") +
+  theme_minimal()
+
+print(grafico)
+
 ```
 
 ### Conclusiones Parciales
